--- a/src/styles/partials/_variable.scss
+++ b/src/styles/partials/_variable.scss
@@ -4,3 +4,8 @@ $background-button-color:#e4e9f8;
 $background-button-shadow:#c5d0f2;
 
 $text-color-button:#2f55d4;
+
+$text-color-jumbotron:#adb5bd;
+
+$background-color-button-general:#2f55d4;
+$text-color-button-general:#ffffff;
