Key Features Completato

--- a/src/styles/partials/_variable.scss
+++ b/src/styles/partials/_variable.scss
@@ -1,6 +1,6 @@
 $background-color-principal:#ffffff;
 $background-jumbotron:#f8f9fc;
-$background-button-color:#e4e9f8;
+$background-button-color:#2f55d41a;
 $background-button-shadow:#c5d0f2;
 
 $text-color-button:#2f55d4;
@@ -9,3 +9,10 @@ $text-color-jumbotron:#adb5bd;
 
 $background-color-button-general:#2f55d4;
 $text-color-button-general:#ffffff;
+$text-color-keyFeatures:#2eca8b;
+
+
+$little-container-bg-color:#3c4858;
+$little-container-bg-bar-color:#4f5a69;
+$little-container-text-bar-color:#ffffff;
+$little-container-text-under-color:#8492a6;
