esercizio base completato( da sistemare colori e ordinare il tutto/ da aggiungere gli hover)

--- a/src/styles/partials/_variable.scss
+++ b/src/styles/partials/_variable.scss
@@ -16,3 +16,11 @@ $little-container-bg-color:#3c4858;
 $little-container-bg-bar-color:#4f5a69;
 $little-container-text-bar-color:#ffffff;
 $little-container-text-under-color:#8492a6;
+
+
+$bg-color-footer:#202942;
+$text-color-footer:#adb5bd;
+
+$footer-color-bg-input:#27314f;
+$footer-color-text-button:#007bff;
+$footer-color-bg-button:#222e51;
