esercizio concluso + responsive

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -12,3 +12,10 @@ body {
     max-width: 1170px;
     margin: auto;
 }
+
+@media screen and (max-width:1200px) {
+    .container{
+        max-width: 90%;
+    }
+    
+}
